@@ -1,5 +1,8 @@
 2021-03-26  Allen D. Ball  <ball@hcf.dev>
 
+	* Translate POST /kernel/print to IOPub.pub(Message)
+	synchronously.
+
 	* Maintain shared ScriptContext in NotebookContext (__) and
 	refactor Magic accordingly.
 
